[package]
name = "douyin_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.14"

[build-dependencies]
prost-build = "0.14"
protox = "0.9"

[dev-dependencies]
# verification-only deps for examples/verify_mongo_roundtrip.rs -- not needed
# by consumers of the generated types.
protox = "0.9"
prost-reflect = "0.16"
mongodb = { version = "3", default-features = false, features = ["compat-3-3-0", "bson-3", "rustls-tls", "dns-resolver"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
anyhow = "1"
